kubernetes/apps/ingress/nginx-controller/external-services/nextcloud.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-nextcloud-ingress
  namespace: ingress
spec:
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-nextcloud-ingress
  labels:
    kubernetes.io/service-name: external-nextcloud-ingress
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - ${LAN_NEXTCLOUD_IP}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app external-nextcloud-ingress
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: 0
    nginx.ingress.kubernetes.io/server-snippet: |-
      server_tokens         off;
      proxy_buffering       off;
      client_max_body_size  0;
      proxy_connect_timeout 20s;
      proxy_send_timeout    600s;
      proxy_read_timeout    150s;
      proxy_redirect        off;
      proxy_set_header      X-Real-IP $remote_addr;
      proxy_set_header      X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header      Host $http_host;
      proxy_hide_header     X-Powered-By;
      proxy_hide_header     Upgrade;
      rewrite ^/.well-known/webfinger /index.php/.well-known/webfinger last;
      rewrite ^/.well-known/nodeinfo /index.php/.well-known/nodeinfo last;
      rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
      rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json;
      location = /.well-known/carddav {
        return 301 $scheme://$host/remote.php/dav;
      }
      location = /.well-known/caldav {
        return 301 $scheme://$host/remote.php/dav;
      }
      location = /robots.txt {
        allow all;
        log_not_found off;
        access_log off;
      }
      location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
        deny all;
      }
      location ~ ^/(?:autotest|occ|issue|indie|db_|console) {
        deny all;
      }
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: external
  rules:
    - host: &host next.abchost.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                protocol: http
                port:
                  number: 80
      tls:
        - hosts:
          - *host
