kubernetes/apps/ingress/nginx-controller/external-services/unifi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-unifi-ingress
  namespace: ingress
spec:
  ports:
    - name: https
      port: &port 443
      protocol: TCP
      targetPort: *port
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-unifi-ingress-endpoint
  labels:
    kubernetes.io/service-name: external-unifi-ingress
addressType: IPv4
ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - ${LAN_CLOUD_KEY_IP}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app external-unifi-ingress
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: internal
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  rules:
    - host: &host un.abchost.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                protocol: https
                port:
                  number: 443
      tls:
        - hosts:
          - *host
